box element is now moving as instructed by arrow keys

--- a/timwatch/index.html
+++ b/timwatch/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Box game</title>
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="box" id="ReadyPlayerOne"></div>
