branching changes to keep original code unharmed background color purple i want emoji's to be bigger in size but haven't figured that out yet Will now work a little on another project

--- a/timwatch/index.html
+++ b/timwatch/index.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="box" id="ReadyPlayerOne"></div>
+<!--<div id="container" align="center">-->
+<!--    <header>header</header>-->
+<!--    <div id="content">-->
+<!--        <div>-->
+            <div class="box" id="ReadyPlayerOne">&#128513;&#128521;&#128526;</div>
+<!--        </div>-->
+<!--    </div>-->
+<!--    <footer>footer</footer>-->
+<!--</div>-->
 <script src="game.js"></script>
 </body>
 </html>
